fixed css related to the paypal buttons z index and edited text misalignment in product cards

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,6 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* HACK TO DISPLAY BUTTONS BEHIND NAVBAR NAVIGATION */
+.paypal-buttons {
+  z-index: 0;
+}
 
 #testana {
   color: red;
